force-app/main/default/objects/cadmus_core__Data_Source__c/fields/cadmus_core__CustomerDataSourceId__c.field-meta.xml
<CustomField>
    <fullName>cadmus_core__CustomerDataSourceId__c</fullName>
    <formula>IF( ISBLANK(cadmus_core__Migrated_Customer_Data_Source_Id__c)
,IF(
    ISBLANK(cadmus_core__Migrated_Customer_Data_Source_Id_2__c)
    , $Organization.Id + &apos;_&apos; + Id
    , cadmus_core__Migrated_Customer_Data_Source_Id_2__c 
  )
, cadmus_core__Migrated_Customer_Data_Source_Id__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Data Source Id</label>
    <type>Text</type>
</CustomField>