force-app/main/default/objects/cadmus_core__Data_Source__c/fields/cadmus_core__Description__c.field-meta.xml
<CustomField>
    <fullName>cadmus_core__Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>