force-app/main/default/objects/cadmus_core__Data_Source__c/fields/cadmus_core__Grouping_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>cadmus_core__Grouping_Field_Name__c</fullName>
    <inlineHelpText>Field that is used in this Data Source WHERE clause. Used for mapping this child Data Source to the correct parent Data Source. Also use this field in your SELECT!</inlineHelpText>
    <label>Grouping Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>