force-app/main/default/objects/cadmus_core__Data_Source__c/fields/cadmus_core__Grouping_Field_Type__c.field-meta.xml
<CustomField>
    <fullName>cadmus_core__Grouping_Field_Type__c</fullName>
    <inlineHelpText>Use Id when the Grouping Field is always of type &apos;Id&apos;, otherwise choose &apos;Object&apos;</inlineHelpText>
    <label>Grouping Field Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Id</fullName>
                <default>true</default>
                <label>Id</label>
            </value>
            <value>
                <fullName>Object</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>DateTime</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>