force-app/main/default/objects/cadmus_core__Data_Source__c/fields/cadmus_core__Image_Name__c.field-meta.xml
<CustomField>
    <fullName>cadmus_core__Image_Name__c</fullName>
    <inlineHelpText>The name of the image you want to include. This is dependent of the image source.
Attachment: Title (File Name)
Document: Unique name
Files: Name</inlineHelpText>
    <label>Image Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>