force-app/main/default/objects/cadmus_core__Data_Source__c/fields/cadmus_core__Image_source__c.field-meta.xml
<CustomField>
    <fullName>cadmus_core__Image_source__c</fullName>
    <label>Image source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NONE</fullName>
                <default>true</default>
                <label>NONE</label>
            </value>
            <value>
                <fullName>ATTACHMENTS</fullName>
            </value>
            <value>
                <fullName>DOCUMENTS</fullName>
            </value>
            <value>
                <fullName>FILES</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>