force-app/main/default/objects/cadmus_core__Data_Source__c/fields/cadmus_core__JSON__c.field-meta.xml
<CustomField>
    <fullName>cadmus_core__JSON__c</fullName>
    <label>JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>