force-app/main/default/objects/cadmus_core__Data_Source__c/fields/cadmus_core__Migrated_Customer_Data_Source_Id__c.field-meta.xml
<CustomField>
    <fullName>cadmus_core__Migrated_Customer_Data_Source_Id__c</fullName>
    <description>THIS FIELD IS DEPRECATED AS THE UNIQUENESS WAS CASE INSENSITIVE
If you migrate a datasource from another Org or a Sandbox, use this field to copy the Datasource Id from that other Org/Sandbox</description>
    <label>DEPRECATED-Migrated Cust Data Source Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>