force-app/main/default/objects/cadmus_core__Data_Source__c/fields/cadmus_core__Parent_Data_Source__c.field-meta.xml
<CustomField>
    <fullName>cadmus_core__Parent_Data_Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Data Source</label>
    <referenceTo>cadmus_core__Data_Source__c</referenceTo>
    <relationshipLabel>Data Sources</relationshipLabel>
    <relationshipName>Data_Sources</relationshipName>
    <type>Lookup</type>
</CustomField>