force-app/main/default/objects/cadmus_core__Data_Source__c/fields/cadmus_core__Parent_Query_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>cadmus_core__Parent_Query_Field_Name__c</fullName>
    <inlineHelpText>Reference to the field in the parent Data Source. This field needs to be included in the SELECT of the Parents Data Source</inlineHelpText>
    <label>Parent Query Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>