force-app/main/default/objects/cadmus_core__Data_Source__c/fields/cadmus_core__Report_API_Name__c.field-meta.xml
<CustomField>
    <fullName>cadmus_core__Report_API_Name__c</fullName>
    <inlineHelpText>API name of the Report that will provide the data</inlineHelpText>
    <label>Report API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>