force-app/main/default/objects/cadmus_core__Data_Source__c/fields/cadmus_core__SOQL__c.field-meta.xml
<CustomField>
    <fullName>cadmus_core__SOQL__c</fullName>
    <defaultValue>&quot;SELECT Id FROM Account WHERE Id = :recordId&quot;</defaultValue>
    <inlineHelpText>Write a SOQL query to retrieve the data that will be used in the templates. You can make use of :recordId to have the starting Id. E.g. SELECT Id, Name FROM Opportunity WHERE Id = :recordId</inlineHelpText>
    <label>SOQL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>