force-app/main/default/objects/cadmus_core__Data_Source__c/fields/cadmus_core__SOQL_Builder_Managed__c.field-meta.xml
<CustomField>
    <fullName>cadmus_core__SOQL_Builder_Managed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>indicates to the user that this datasource was originally created with the SOQL Builder</description>
    <inlineHelpText>If the SOQL was originally built via the SOQL Builder, then take care when you edit in the SOQL window directly! Best edit either in SOQL Builder or directly write your own SOQL</inlineHelpText>
    <label>SOQL Builder Managed</label>
    <type>Checkbox</type>
</CustomField>