force-app/main/default/objects/cadmus_core__Data_Source__c/fields/cadmus_core__Static_Data_JSON__c.field-meta.xml
<CustomField>
    <fullName>cadmus_core__Static_Data_JSON__c</fullName>
    <label>Static Data JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>