force-app/main/default/objects/cadmus_core__Data_Source__c/fields/cadmus_core__Translation_Object__c.field-meta.xml
<CustomField>
    <fullName>cadmus_core__Translation_Object__c</fullName>
    <label>Translation Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>