force-app/main/default/objects/cadmus_core__Data_Source__c/fields/cadmus_core__Type__c.field-meta.xml
<CustomField>
    <fullName>cadmus_core__Type__c</fullName>
    <inlineHelpText>Select the correct type the SOQL will return. E.g. When using LIMIT 1 at the end of the SOQL it should always be &apos;Single sObject&apos;, otherwise select &apos;List of sObjects&apos;.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>List of sObjects</fullName>
                <default>true</default>
                <label>List of sObjects</label>
            </value>
            <value>
                <fullName>Single sObject</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>