force-app/main/default/objects/cadmus_core__Data_Source__c/recordTypes/cadmus_core__KEYVALUE.recordType-meta.xml
<RecordType>
    <fullName>cadmus_core__KEYVALUE</fullName>
    <active>true</active>
    <label>KEYVALUE</label>
</RecordType>