force-app/main/default/objects/cadmus_core__Data_Source__c/recordTypes/cadmus_core__PICKLIST_TRANSLATION.recordType-meta.xml
<RecordType>
    <fullName>cadmus_core__PICKLIST_TRANSLATION</fullName>
    <active>true</active>
    <label>PICKLIST TRANSLATION</label>
</RecordType>