force-app/main/default/objects/cadmus_core__Data_Source__c/recordTypes/cadmus_core__PICTURE_LIST.recordType-meta.xml
<RecordType>
    <fullName>cadmus_core__PICTURE_LIST</fullName>
    <active>true</active>
    <description>Type for adding sending dynamic pictures to PDF Butler</description>
    <label>PICTURE LIST</label>
</RecordType>