force-app/main/default/objects/cadmus_core__Data_Source__c/recordTypes/cadmus_core__REPORT.recordType-meta.xml
<RecordType>
    <fullName>cadmus_core__REPORT</fullName>
    <active>true</active>
    <label>REPORT</label>
</RecordType>