force-app/main/default/objects/cadmus_core__Data_Source__c/recordTypes/cadmus_core__SOQL.recordType-meta.xml
<RecordType>
    <fullName>cadmus_core__SOQL</fullName>
    <active>true</active>
    <label>SOQL</label>
</RecordType>