force-app/main/default/objects/cadmus_core__Data_Source__c/recordTypes/cadmus_core__STATIC_VALUES.recordType-meta.xml
<RecordType>
    <fullName>cadmus_core__STATIC_VALUES</fullName>
    <active>true</active>
    <label>STATIC VALUES</label>
</RecordType>