force-app/main/default/objects/cadmus_core__Data_Source__c/listViews/cadmus_core__All.listView-meta.xml
<ListView>
    <fullName>cadmus_core__All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>cadmus_core__Type__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>cadmus_core__SOQL_Builder_Managed__c</columns>
    <columns>cadmus_core__Parent_Data_Source__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>